Working Javasvript writer for dOOv validation rules